# animeloop-cli

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md
.github/workflows/: build.yml
animeloop-cli/: aHash.cpp  aHash.hpp  algorithm.cpp  algorithm.hpp  child_process.cpp  child_process.hpp  dHash.cpp  dHash.hpp  filter.cpp  filter.hpp  loop_video.cpp  loop_video.hpp  main.cpp  models.cpp  models.hpp  progress_bar.hpp  thread_pool.h  utils.cpp  utils.hpp
animeloop-cli.xcodeproj/: project.pbxproj
animeloop-cli.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
research/: color.cpp  cuts_switch.cpp  figure_display.py  similar_and_same.cpp
